<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.MonumentsFragment"
    android:outlineProvider="background"
    android:background="@drawable/dialog_background_without_padding">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
       android:layout_alignParentEnd="true"
       android:layout_alignParentBottom="true">

      <com.google.android.material.imageview.ShapeableImageView
          android:id="@+id/imgMonument"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:scaleType="centerCrop"
          app:cornerFamily="rounded"
          app:cornerSize="8dp"
          style="@style/ShapeAppearanceOverlay.App.SelectedCornerRadius"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"
          android:layout_height="@dimen/auto_size"
          android:padding="@dimen/margin_default"
          android:layout_marginBottom="@dimen/margin_min"
          app:layout_constraintBottom_toTopOf="@+id/closeBtn"
          app:layout_constraintTop_toBottomOf="@+id/imgMonument">

         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:gravity="center"
                android:maxLines="2"
                android:textColor="@color/zgz_red_dark"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Palacion de la moncloa" />

            <TextView
                android:id="@+id/tvHeadDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/fragment_details_description_head"
                android:textColor="@color/zgz_red_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tvHeadDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvHeadDescription"
                tools:text="El Foro es el centro neurálgico de la vida en una ciudad romana: es el principal lugar de reunión donde se desarrolla la vida político-administrativa, económica y religiosa. El recinto forense se organiza a partir de un gran espacio abierto, rodeado de uno o varios pórticos circundantes, en torno al cual se distribuyen los edificios más significativos: la Curia, dedicada a usos políticos y administrativos; la Basílica, donde se resuelven asuntos jurídicos; y el Templo principal de la ciudad. Junto a ellos están las tabernas, locales dedicados a usos comerciales, y seguramente habría otros edificios relacionados con la administración (archivos, acuñación de moneda, etc.). Este conjunto monumental se completa con diversos elementos ornamentales (aras para sacrificios, estatuas honoríficas, arcos de triunfo, etc.) de los que en el caso de Caesaraugusta conocemos algunos a través de su representación en las monedas de la ciudad." />

            <TextView
                android:id="@+id/tvHeadSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/fragment_details_schedule_head"
                android:textColor="@color/zgz_red_dark"
                app:layout_constraintStart_toStartOf="@id/tvHeadDescription"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <TextView
                android:id="@+id/tvSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tvHeadDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvHeadSchedule"
                tools:text="Martes a sábado de 10 a 14h y 17 a 21h \nDomingos 10 a 14.30h \nLunes cerrado \nMedia hora antes del cierre se interrumpe la entrada." />

         </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.core.widget.NestedScrollView>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/closeBtn"
          android:layout_width="wrap_content"
          android:layout_height="50dp"
          android:src="@drawable/default_close_icon"
          android:text="@string/generic_close"
          app:icon="@drawable/default_close_icon"
          android:layout_marginEnd="@dimen/margin_default"
          android:layout_marginBottom="@dimen/margin_default"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/locateBtn"
          android:layout_width="wrap_content"
          android:layout_height="50dp"
          android:src="@drawable/default_close_icon"
          android:text="@string/generic_locate"
          app:icon="@drawable/ic_location_on"
          android:layout_marginStart="@dimen/margin_default"
          android:layout_marginBottom="@dimen/margin_default"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

   </androidx.constraintlayout.widget.ConstraintLayout>






</RelativeLayout>